[tool.poetry]
name = "routeros"
version = "0.1.0"
description = "Implementation of Mikrotik API"
authors = ["Ramiro Tician <ramirotician@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rtician/routeros"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries'
]

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
